struct-impl-tests/tests/compile_fail/fn_precondition_missing.rs
#![feature(proc_macro_hygiene)]
#![feature(stmt_expr_attributes)]

include!("../../../tests/fn_precondition_missing.rs");
